[package]
name = "skitty"
version = "0.1.0"
authors = ["Daniel Mason"]
description = "Structures and destructures sketch files for use with git"
license = "MIT"
repository = "https://github.com/gisleburt/skitty"
exclude = ["example/**/*", ".idea/**/*", "target/**/*"]

[dependencies]
clap = {version = "~2.32.0", features = ["yaml"]}
failure = "^0.1.2"
serde = "1.0.76"
serde_json = "1.0.26"
notify = "^4.0.0"
zip = "^0.4.2"
